# embree-aarch64

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  bootstrap-llvm-mingw-win64.bat  vcsetup-2017.bat  vcsetup-2019.bat
.github/workflows/: ccpp.yml  windows.yml
common/algorithms/: CMakeLists.txt  parallel_for.h  parallel_reduce.h  parallel_sort.h
common/cmake/: FindGLFW3.cmake  clang-aarch64-cross-toolchain.cmake  clang.cmake  gnu.cmake  ispc.cmake  llvm-mingw-cross.cmake  llvm-mingw-win64.cmake  mingw64-cross.cmake  msvc.cmake  package.cmake  test.cmake  tutorial.cmake
common/math/: AVX2NEON.h  SSE2NEON.h  bbox.h  col3.h  col4.h  color.h  constants.cpp  constants.h  math.h  vec2.h  vec2fa.h  vec3.h  vec3fa.h  vec3ia.h  vec4.h
common/simd/: simd.h  sse.h  vboold4_avx.h  vboolf4_sse2.h  vboolf8_avx.h  vdouble4_avx.h  vfloat4_sse2.h  vfloat8_avx.h  vint16_avx512.h  vint4_sse2.h  vint8_avx.h  vint8_avx2.h  vllong8_avx512.h  vuint16_avx512.h  vuint4_sse2.h  vuint8_avx.h  vuint8_avx2.h
common/sys/: CMakeLists.txt  array.h  intrinsics.h  library.cpp  mutex.cpp  platform.h  sysinfo.cpp  sysinfo.h  thread.cpp  thread.h
common/tasking/: CMakeLists.txt  taskscheduler.h  taskschedulergcd.cpp  taskschedulerinternal.cpp  taskschedulerinternal.h
include/embree3/: rtcore_common.h
kernels/: CMakeLists.txt  embree.mrc
kernels/builders/: bvh_builder_sah.h
kernels/bvh/: bvh.cpp  bvh.h  bvh_builder_morton.cpp  bvh_builder_subdiv.cpp  bvh_intersector_hybrid.cpp  bvh_intersector_stream.h  bvh_node_ref.h  bvh_statistics.cpp  bvh_traverser1.h  node_intersector1.h  node_intersector_packet.h
kernels/common/: accel.h  acceln.cpp  alloc.cpp  alloc.h  default.h  device.cpp  isa.h  primref.h  primref_mb.h  rtcore.cpp  scene.cpp  scene.h  scene_subdiv_mesh.h  state.cpp
kernels/geometry/: curveNi.h  curveNi_mb.h  curve_intersector_virtual.cpp  curve_intersector_virtual2.cpp  curve_intersector_virtual_bezier_curve.cpp  curve_intersector_virtual_bezier_curve.h  curve_intersector_virtual_bezier_curve2.cpp  curve_intersector_virtual_bspline_curve.cpp  curve_intersector_virtual_bspline_curve.h  curve_intersector_virtual_bspline_curve2.cpp  curve_intersector_virtual_catmullrom_curve.cpp  curve_intersector_virtual_catmullrom_curve.h  curve_intersector_virtual_catmullrom_curve2.cpp  curve_intersector_virtual_hermite_curve.cpp  curve_intersector_virtual_hermite_curve.h  curve_intersector_virtual_hermite_curve2.cpp  curve_intersector_virtual_linear_curve.cpp  curve_intersector_virtual_linear_curve.h  curve_intersector_virtual_linear_curve2.cpp  curve_intersector_virtual_point.cpp  curve_intersector_virtual_point.h  curve_intersector_virtual_point2.cpp  cylinder.h  grid_soa.cpp  grid_soa.h  instance_intersector.cpp
kernels/subdiv/: tessellation_cache.cpp  tessellation_cache.h
scripts/: bootstrap-aarch64-clang-cross-linux.sh  bootstrap-aarch64-gcc-cross-linux.sh  bootstrap-aarch64-ios.sh  bootstrap-aarch64-linux-avx2-emu.sh  bootstrap-aarch64-linux.sh  bootstrap-android-cmake-linux.sh  bootstrap-arm64-macos.sh  bootstrap-arm64-travis.sh  bootstrap-clang-linux.sh  bootstrap-llvm-mingw-cross.sh  bootstrap-macos-clang.sh  bootstrap-mindep.sh  bootstrap-mingw-cross.sh  bootstrap-x86-gcc-linux.sh
test-ios/curve/: Makefile  main.cc
test-ios/disp/: Makefile  main.cc
test-ios/hair/: Makefile  README.md  main.cc  stb_image_write.h
test-ios/interp/: Makefile  main.cc
test-ios/isect-filter/: Makefile  main.cc
test-ios/mb/: Makefile  main.cc
test-ios/point/: Makefile  setup.sh
test-ios/subd/: Makefile  main.cc
test/curve/: Makefile  main.cc  run.sh
test/disp/: Makefile  main.cc  run.sh
test/hair/: Makefile  main.cc  run.sh
test/interp/: Makefile  main.cc
test/isect-filter/: Makefile  main.cc
test/mb/: Makefile  main.cc
test/numeric/: Makefile  main.cc
tutorials/: CMakeLists.txt
tutorials/android/bitmap-render/: README.md
tutorials/android/bitmap-render/app/: build.gradle
tutorials/android/bitmap-render/app/src/main/: AndroidManifest.xml
tutorials/android/bitmap-render/app/src/main/cpp/: CMakeLists.txt  embreerender.cc  nanort-vec3.h  obj-loader.cc
tutorials/android/bitmap-render/app/src/main/java/com/example/embreerender/: EmbreeRender.java
tutorials/android/bitmap-render/app/src/main/res/values/: strings.xml
tutorials/bvh_access/: CMakeLists.txt
tutorials/common/: CMakeLists.txt
tutorials/common/imgui/: CMakeLists.txt
tutorials/common/math/: random_sampler.h
tutorials/common/tutorial/: CMakeLists.txt  application.cpp  tutorial.cpp  tutorial.h  tutorial_device.cpp
tutorials/convert/: CMakeLists.txt
tutorials/minimal/: CMakeLists.txt
tutorials/verify/: CMakeLists.txt  verify.cpp
(+9 files in other folders)
